# optimealy

./: .gitignore  README.md  backlog.md  docker-compose.yml  package-lock.json
app/: .gitignore  App.tsx  README.md  UPGRADE-INSTRUCTIONS.md  UPGRADE-SDK54.md  app.config.js  package-lock.json  package.json  solution.py  tsconfig.json
app/assets/: README.md
app/src/: .gitkeep
app/src/context/: AuthContext.tsx  ThemeContext.tsx
app/src/hooks/: usePantry.ts  usePlans.ts
app/src/navigation/: AppNavigator.tsx  AuthNavigator.tsx  MainNavigator.tsx
app/src/screens/: codemap.md
app/src/services/: api.ts  authService.ts  pantryService.ts  planService.ts  productService.ts  settingsService.ts
app/src/theme/: colors.ts  index.ts  spacing.ts  typography.ts
app/src/types/: models.ts
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test_optimization_local.py
backend/alembic/: env.py
backend/alembic/versions/: 83b7c722a3b0_initial_models.py  a1b2c3d4e5f7_remove_hardcoded_recipe_nutrition.py  b8dcc4d3c79a_merge_heads.py  c9edd5e6f8a1_add_exact_quantity.py  e298c08e1bc0_add_dish_based_planning_fields.py  f1a2b3c4d5e6_rename_sweet_lunch_to_dessert.py  g2h3i4j5k6l7_consolidate_meal_types.py  h3i4j5k6l7m8_add_user_pantry_items.py  i4j5k6l7m8n9_add_pantry_additions_field.py  j5k6l7m8n9o0_add_plan_execution.py  j7k8l9m0n1o2_add_pantry_expiry_date.py  k6l7m8n9o0p1_add_meal_plan_name.py
backend/data/: .gitkeep  generate_seed_data.py
backend/data/products/: sample-products.json
backend/data/recipes/: README.md  extend_sample_recipes.py  recipes-new-meal-types.json  sample-recipes.json
backend/scripts/: extract_products.py  generate_recipes.py  generate_recipes_direct.py  run_evaluation_experiments.py  run_seed.py  setup_db.sh
backend/src/: .gitkeep  main.py
backend/src/api/: __init__.py  auth.py  grocery.py  health.py  meal_plans.py  pantry.py  users.py
backend/src/api/middleware/: __init__.py  auth.py
backend/src/config/: pantry_staples.py
backend/src/core/: config.py  exceptions.py  security.py
backend/src/database/: connection.py  seed.py
backend/src/models/: __init__.py  enums.py  grocery.py  meal_completion.py  meal_plan.py  product.py  recipe.py  recipe_ingredient.py  user.py  user_ingredient_preference.py  user_pantry_item.py
backend/src/services/: __init__.py  auth_service.py  grocery_service.py  meal_plan_service.py  plan_execution_service.py  product_service.py  recipe_service.py
backend/src/services/optimization/: __init__.py  constraints.py  objective.py  solver.py  test_objective.py  utils.py
backend/src/utils/: unitConversion.py
backend/tests/: test_grocery_service.py  test_optimization_algorithm.py
shared/types/: .gitkeep  api-contracts.ts
(+29 files in other folders)
